--- a/notebooks/1_fct_approx.ipynb
+++ b/notebooks/1_fct_approx.ipynb
@@ -77,8 +77,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@interact(n_points=50, a=0.8, b=(-10,+10,1))\n",
-    "def linear_regression(n_points, a, b):\n",
+    "@interact(n_points=50, a=0.8, b=(-10,+10,1), ar=0.8, br=(-10,+10,1))\n",
+    "def linear_regression(n_points, a, b, ar, br):\n",
     "    # This function is generating fake dataset (n_points) based on a linear function (a*x + b = t),\n",
     "    # adding some noise to make it \"real\"\n",
     "    # Approximating a and b\n",
@@ -92,7 +92,10 @@
     "    xn=x+np.random.randn(n_points)\n",
     "\n",
     "    # Linear regressison -polyfit - polyfit can be used other orders polys\n",
-    "    (ar,br)=np.polyfit(t,xn,1)\n",
+    "    \n",
+    "    # With this line, you can calculate automatically ar and br\n",
+    "    #(ar,br)=np.polyfit(t,xn,1)\n",
+    "    \n",
     "    xr=np.polyval([ar,br],t)\n",
     "\n",
     "    # Compute the MSE (just for having an idea, it's not used inside polyfit)\n",
@@ -101,7 +104,7 @@
     "    print('Linear regression using polyfit')\n",
     "    print('parameters: a=%.2f b=%.2f \\nregression: a=%.2f b=%.2f, ms error= %.3f' % (a,b,ar,br,err))\n",
     "\n",
-    "    #bokeh plotting\n",
+    "    # Bokeh plotting\n",
     "    p1 = figure(title='Data without noise', plot_width=400, plot_height=400)\n",
     "    r1 = p1.circle(t, x, color='green')\n",
     "\n",
@@ -126,7 +129,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The MSE represent the \"average distance\" between your data and the line. The goal is to **minimize this distance** so we can consider our model is the \"**most accurate**\". This concept is called \"**loss function**\". "
+    "The MSE represent the \"average distance\" between your data and the line. The goal is to **minimize this distance** so we can consider our model is the \"**most accurate**\". This concept is called \"**loss function**\".  \n",
+    "\n",
+    "$$\\mathscr{L} = \\frac{1}{n} \\sum_{i=1}^{n}(Y_i-\\widehat {Y_i})^2$$  \n",
+    "$Y_i$ is the data (it is known) and $\\widehat{Y_i}$ is what we predicted (what we try to be accurate). So in the ideal case, $Y_i-\\widehat {Y_i}$ is equal to $0$! Or at least, the closest it is to $0$, the more accurate is our model.  \n",
+    "\n",
+    "![MSE concept](images/MSE_concept.png \"MSE concept\")"
    ]
   },
   {
@@ -159,8 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def interpolation(n_samples):\n",
@@ -196,21 +206,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'interact' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-7c3633cebad1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minteract\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minterpolation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'interact' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "interact(interpolation, n_samples = (2, 15, 1))"
    ]
@@ -234,7 +232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -248,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
