--- a/notebooks/2_dataset_forward_prop.ipynb
+++ b/notebooks/2_dataset_forward_prop.ipynb
@@ -201,25 +201,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point, we have almost all theoritical inforamtion. Let's write some code.  \n",
-    "We need to store our model somewhere, so we will use a python dictionnary:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = {'W1': W1, 'b1': b1, 'W2': W2, 'b2': b2}\n",
-    "type(model)"
+    "At this point, we have almost all theoritical inforamtion. Let's write some code."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And initilize parameters we will need later:"
+    "let's initilize the parameters we will need later:"
    ]
   },
   {
@@ -265,6 +254,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We need to store our model somewhere, so we will use a python dictionnary:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = {'W1': W1, 'b1': b1, 'W2': W2, 'b2': b2}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -302,6 +307,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ output = \\widehat{y} = softmax(i_2)$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -309,7 +321,7 @@
    },
    "outputs": [],
    "source": [
-    "def feedforward(model):\n",
+    "def feedforward(model, X):\n",
     "    # Compute the feedforward\n",
     "    \n",
     "    W1, b1, W2, b2 = model['W1'], model['b1'], model['W2'], model['b2']\n",
@@ -318,7 +330,7 @@
     "    i2 = h1.dot(W2) + b2\n",
     "    \n",
     "    # the softmax part\n",
-    "    exp_scores = np.exp(z2)\n",
+    "    exp_scores = np.exp(i2)\n",
     "    probs = exp_scores / np.sum(exp_scores, axis=1, keepdims=True)\n",
     "    \n",
     "    return np.argmax(probs, axis=1)\n"
@@ -330,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = feedforward(model)\n",
+    "output = feedforward(model, X)\n",
     "print('The size of our samples is',len(X))\n",
     "print('And the size of our input:',len(output))\n",
     "output"
@@ -368,7 +380,7 @@
    "outputs": [],
    "source": [
     "# Plot the decision boundary\n",
-    "plot_decision_boundary(lambda x: predict(model, x))\n",
+    "plot_decision_boundary(lambda x: feedforward(model, x))\n",
     "plt.title(\"Our non-yet-trained model is not very useful...\")"
    ]
   },
@@ -391,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -405,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
